--- a/.github/workflows/streamdeck-plugin-build.yml
+++ b/.github/workflows/streamdeck-plugin-build.yml
@@ -1,10 +1,25 @@
-name: "Build and bundle the Stream Deck plugin"
+name: "Stream Deck Plugin"
+
 on:
   workflow_dispatch:
+  release:
+    types: [published]
+  pull_request:
+    paths:
+      - streamdeck-plugin/**
+      - com.chrisregado.googlemeet.sdPlugin/**
+      - .github/workflows/**
   push:
     paths:
       - streamdeck-plugin/**
       - com.chrisregado.googlemeet.sdPlugin/**
+      - .github/workflows/**
+    branches:
+      - '**'
+    tags-ignore:
+      # Don't run again on tags since we already run on all branches.
+      - '**'
+
 jobs:
   build-plugin:
     strategy:
@@ -73,3 +88,23 @@ jobs:
         with:
           name: com.chrisregado.googlemeet.streamDeckPlugin
           path: output/com.chrisregado.googlemeet.streamDeckPlugin
+
+  attach-to-release:
+    name: Attach artifacts to release
+    if: ${{ github.event_name == 'release' }}
+    runs-on: ubuntu-latest
+    needs: [bundle-streamdeck-distributable]
+    permissions:
+      contents: write  # Needed for softprops/action-gh-release
+    steps:
+      - name: Download Stream Deck plugin
+        uses: actions/download-artifact@v4
+        with:
+          name: com.chrisregado.googlemeet.streamDeckPlugin
+          path: ./artifacts
+
+      - name: Attach artifacts to release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            ./artifacts/com.chrisregado.googlemeet.streamDeckPlugin
