--- a/browser-extension/package.json
+++ b/browser-extension/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "streamdeck-googlemeet-browser-extension",
-  "version": "0.0.3",
-  "description": "Browser extension for Stream Deck Google Meet plugin",
+  "name": "streamdeck-googlemeet-browser-extensions",
+  "version": "0.0.1",
+  "description": "Browser extensions for the Stream Deck Google Meet plugin",
   "scripts": {
-    "update-version": "node -e \"const fs = require('fs'); const {getVersion} = require('./get-version'); const pkg = JSON.parse(fs.readFileSync('package.json', 'utf8')); pkg.version = getVersion(); fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));\"",
     "build": "node build.js",
+    "clean": "node clean.js",
     "package-chrome": "node package-chrome.js",
-    "package-firefox": "web-ext build --source-dir=build/firefox --artifacts-dir=build --overwrite-dest",
+    "package-firefox": "web-ext build --source-dir=build/firefox --artifacts-dir=build --filename=firefox-extension.zip --overwrite-dest",
     "sign-firefox": "web-ext sign --channel=unlisted --source-dir=build/firefox --artifacts-dir=build",
     "package-all": "npm run build && npm run package-chrome && npm run package-firefox",
-    "dev-firefox": "npm run build && web-ext run --source-dir=build/firefox --browser-console",
-    "test-firefox": "node test-firefox.js",
     "lint-firefox": "web-ext lint --source-dir=build/firefox",
-    "publish-chrome": "echo 'Use GitHub Actions workflow for Chrome publishing'",
-    "publish-firefox": "echo 'Use GitHub Actions workflow for Firefox publishing'",
-    "publish-all": "echo 'Use GitHub Actions workflow for publishing both extensions'",
-    "validate-publishing": "node validate-publishing-setup.js"
+    "dev-firefox": "npm run build && web-ext run --source-dir=build/firefox --browser-console --start-url https://meet.google.com/"
   },
   "devDependencies": {
-    "web-ext": "^7.8.0"
+    "web-ext": "^8.9.0"
   },
   "keywords": [
     "streamdeck",
