Run signed builds on git tags and attach to Release using a separate workflow

--- a/.github/workflows/browser-extension-build.yml
+++ b/.github/workflows/browser-extension-build.yml
@@ -1,9 +1,7 @@
-name: "Browser Extensions"
+name: "Build Browser Extensions"  # If you change this name, you'll also need to update the release.yaml job
 
 on:
   workflow_dispatch:
-  release:
-    types: [published]
   pull_request:
     paths:
       - browser-extension/**
@@ -14,24 +12,25 @@ on:
       - .github/workflows/**
     branches:
       - '**'
-    tags-ignore:
-      # Don't run again on tags since we already run on all branches.
-      - '**'
+    tags:
+      # Only run on release tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+
 jobs:
   build-extensions:
     name: Build and bundle the browser extensions
+    # Since we run on both branch pushes and PRs, don't do a duplicated run if the PR is for a branch in the local repo:
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
         working-directory: browser-extension
-    outputs:
-      version: ${{ steps.get-version.outputs.version }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch all history for tags
+          fetch-depth: 0  # Fetch all history to pull git tags
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -52,7 +51,7 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Using version: $VERSION"
 
-      - name: Build extensions
+      - name: Build our browser extensions
         run: |
           npm run build
 
@@ -71,9 +70,10 @@ jobs:
           npm run package-firefox
 
       - name: Package Firefox extension (signed for release)
+        id: sign-firefox-extension
         # Only sign versions that we actually intend to release. Mozilla does not allow the same version
         # number to be signed multiple times, so duplicated build attempts will fail.
-        if: ${{ github.event_name == 'release' }}
+        if: ${{ github.ref_type == 'tag' }}
         env:
           WEB_EXT_API_KEY: ${{ secrets.FIREFOX_JWT_ISSUER }}
           WEB_EXT_API_SECRET: ${{ secrets.FIREFOX_JWT_SECRET }}
@@ -103,56 +103,37 @@ jobs:
 
           echo "✅ Manifest validation passed - Version: $CHROME_VERSION"
 
+      - name: Rename Chrome extension
+        run: |
+          mv ./build/chrome-extension.zip ./build/chrome-extension-v${{ steps.get-version.outputs.version }}.zip
+
+      - name: Rename Firefox extension (unsigned)
+        run: |
+          mv ./build/firefox-extension.zip ./build/firefox-extension-unsigned-v${{ steps.get-version.outputs.version }}.zip
+
+      - name: Rename Firefox extension (signed)
+        if: ${{ steps.sign-firefox-extension.outcome != 'skipped' }}
+        run: |
+          mv ./build/streamdeck_googlemeet-${{ steps.get-version.outputs.version }}.xpi ./build/firefox-extension-v${{ steps.get-version.outputs.version }}.xpi
+
       - name: Upload Chrome extension artifact
         uses: actions/upload-artifact@v4
         with:
-          name: chrome-extension-v${{ steps.get-version.outputs.version }}
-          path: browser-extension/build/chrome-extension.zip
+          # If you change this artifact name or filename, you must also update the release job's download-artifact steps.
+          name: chrome-extension
+          path: browser-extension/build/chrome-extension-v${{ steps.get-version.outputs.version }}.zip
 
       - name: Upload Firefox extension artifact (unsigned)
         uses: actions/upload-artifact@v4
         with:
-          name: firefox-extension-unsigned-v${{ steps.get-version.outputs.version }}
-          path: browser-extension/build/firefox-extension.zip
+          # If you change this artifact name or filename, you must also update the release job's download-artifact steps.
+          name: firefox-extension-unsigned
+          path: browser-extension/build/firefox-extension-unsigned-v${{ steps.get-version.outputs.version }}.zip
 
       - name: Upload Firefox extension artifact (signed)
-        if: ${{ github.event_name == 'release' }}
+        if: ${{ steps.sign-firefox-extension.outcome != 'skipped' }}
         uses: actions/upload-artifact@v4
         with:
-          name: firefox-extension-signed-v${{ steps.get-version.outputs.version }}
-          path: browser-extension/build/streamdeck_googlemeet-${{ steps.get-version.outputs.version }}.xpi
-
-  attach-to-release:
-    name: Attach artifacts to the GitHub Release
-    if: ${{ github.event_name == 'release' }}
-    runs-on: ubuntu-latest
-    needs: [build-extensions]
-    permissions:
-      contents: write  # Needed for softprops/action-gh-release
-    steps:
-      - name: Download Chrome extension
-        uses: actions/download-artifact@v4
-        with:
-          name: chrome-extension-v${{ needs.build-extensions.outputs.version }}
-          path: ./artifacts
-
-      - name: Rename Chrome extension
-        run: |
-          mv ./artifacts/chrome-extension.zip ./chrome-extension-v${{ needs.build-extensions.outputs.version }}.zip
-
-      - name: Download Firefox extension
-        uses: actions/download-artifact@v4
-        with:
-          name: firefox-extension-signed-v${{ needs.build-extensions.outputs.version }}
-          path: ./artifacts
-
-      - name: Rename Firefox extension
-        run: |
-          mv ./artifacts/streamdeck_googlemeet-${{ needs.build-extensions.outputs.version }}.xpi ./firefox-extension-v${{ needs.build-extensions.outputs.version }}.xpi
-
-      - name: Attach all artifacts to release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            ./chrome-extension-v${{ needs.build-extensions.outputs.version }}.zip
-            ./firefox-extension-v${{ needs.build-extensions.outputs.version }}.xpi
+          # If you change this artifact name or filename, you must also update the release job's download-artifact steps.
+          name: firefox-extension-signed
+          path: browser-extension/build/firefox-extension-v${{ steps.get-version.outputs.version }}.xpi
